# refactored-barnacle

./: README.md  app.gresource.xml  app.js  app.ui  appPage.js  appWindow.js  appwindow.ui  arrangement.js  audioPlayer.js  colorSchemeWidget.js  colorschemewidget.ui  controlPanelPage.js  controlpanel.ui  gen.js  hackerViewPage.js  hackerview.ui  main.js  meson.build  model.js  name.ptomato.RefactoredBarnacle  name.ptomato.RefactoredBarnacle.yaml  palette.js
arrangement/: pianoNoise.js  tiledGridNoise.js  windshieldNoise.js
banner/: rot13.js  rot13.ui
card/: rot13.js  rot13.ui
